<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.fragment.FaqsFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="vertical"
               android:weightSum="1">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtFAQQ1"
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:textColor="#FF0000"
                   android:textStyle="bold"
                   android:text="@string/question1"
                   android:textSize="16sp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtFAQA1"
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:textSize="16sp"
                   android:layout_marginTop="10dp"
                   android:text="@string/answer1"
                   android:textColor="#000000"/>
           </LinearLayout>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_marginTop="5dp"
                   android:textColor="#909090"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="#00000000"
               android:weightSum="1"
               android:orientation="vertical"
               android:layout_margin="12dp">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtFAQQ2"
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:textColor="#FF0000"
                   android:text="@string/question2"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   android:layout_marginTop="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtFAQA2"
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:textColor="#000000"
                   android:layout_marginTop="10dp"
                   android:text="@string/answer2"
                   android:textSize="16sp" />
           </LinearLayout>

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:textColor="#909090"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtFAQQ3"
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:textColor="#FF0000"
                   android:textStyle="bold"
                   android:text="@string/question3"
                   android:textSize="16sp"
                   android:layout_marginTop="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtFAQA3"
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:textColor="#000000"
                   android:text="@string/answer2"
                   android:layout_marginTop="10dp"
                   android:textSize="16sp"/>
            </LinearLayout>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:textColor="#909090"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:background="#00000000"
                android:orientation="vertical"
                android:weightSum="1">

               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtFAQQ4"
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:textColor="#FF0000"
                   android:text="@string/question4"
                   android:textSize="16sp"
                   android:textStyle="bold"
                   android:layout_marginTop="10dp"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtFAQA4"
                   android:layout_gravity="center"
                   android:padding="5dp"
                   android:textColor="#000000"
                   android:text="@string/answer4"
                   android:layout_marginTop="10dp"
                   android:textSize="16sp"/>
            </LinearLayout>
    </LinearLayout>


</LinearLayout>