<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.fragment.LoginFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:id="@+id/login_dialog"
        android:visibility="invisible"
        android:elevation="2dp">
        <ProgressBar
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            android:outlineSpotShadowColor="@color/colorAccent"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">
        <ImageView
            android:id="@+id/imgLogo"
            android:padding="10dp"
            android:layout_width="240dp"
            android:layout_height="100dp"
            android:src="@drawable/food_app"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/etMobileNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgLogo"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="10"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="4dp"
            android:padding="6dp"
            android:textSize="18sp"
            android:hint="@string/mobile_number_10_digits"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNo"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#ffffff"
            android:textSize="18sp"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="4dp"
            android:maxLines="1"
            android:maxLength="8"
            android:padding="6dp"
            android:inputType="numberPassword"
            android:hint="@string/enter_password"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#FF0000"
            android:text="@string/log_in"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="20dp"
            android:textColor="#ffffff"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:padding="6dp"/>
    </RelativeLayout>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_yourself"
            android:padding="6dp"
            android:textSize="20sp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"/>
</RelativeLayout>